<resources>
    <string name="app_name">Practica7</string>
    <string name="datosNombre">Tomás Soler</string>
    <string name="datosCorreo">practica7@correo.es</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="nombre_empresa">nombre empresa</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="telefonoPorDefecto">123456789</string>
    <string name="info_empresa">Información de la empresa</string>
    <string name="OK">OK</string>
    <string name="infoConferencia">Información de la Conferencia</string>
    <string name="saltoLinea">\n</string>
    <string name="fecha">"Fecha: "</string>
    <string name="sala">"Sala: "</string>
    <string name="horario">"Horario: "</string>
    <string name="conferencia">Conferencia Iniciada: </string>
    <string name="datosConferencia">Conferencia iniciada</string>
    <string name="sendmessage">Escribe tu mensaje...</string>
    <string name="mensaje">Usuario@Correo.es => Mensaje</string>
    <string name="iguala"><![CDATA[" => "]]></string>
</resources>